<resources>
    <string name="app_name">Routes</string>

    <!-- Strings related to login -->
    <string name="title">My Routes</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday(mm/dd/yy)</string>
    <string name="weight">Weight(lb)</string>
    <string name="height">Height(ft)</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="see_profile">See my profile</string>
    <string name="see_activities">See my routes</string>
    <string name="recommend">Recommend Routes</string>
    <string name="create">Create a Route</string>
    <string name="community">Community</string>
    <string name="sort">Sort by: </string>
    <string name="route_name">Name your route here</string>
    <string name="whether_share">Share to community</string>
    <string name="choose_color">Choose a colour</string>
    <string name="save">Save</string>
    <string name="rate_it">How do you like this Route?</string>
    <string name="comment_it">Would you like to say something about this Route? </string>
    <string name="add_comment">Add your comment here:</string>
    <string name="good">Good Job!</string>
    <string name="next">What is next?</string>
    <string name="go_community">Go to Community</string>
    <string name="my_route">See my Routes</string>
    <string name="upload_photos">Upload photos</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="button_start_tracking">Start</string>
    <string name="button_stop_tracking">Complete</string>
    <string name="results_format">Distance: %1$.4fKM %2$.4fMI\nAverage speed: %3$.1fKPH %4$.1fMPH</string>
    <string name="results">Distance and Average Speed</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_signup2">Signup2</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Arrays -->

    <string-array name="ft_array">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="in_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
