<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ohiris.route.Activities.MainAfterLogin">

    <RelativeLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#f0f0f0">


        <ImageView
            android:id="@+id/image_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/button_see_prof"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/see_profile" />

        <Button
            android:id="@+id/button_see_act"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button_see_prof"
            android:layout_alignRight="@+id/button_see_prof"
            android:layout_below="@+id/button_see_prof"
            android:text="@string/see_activities" />


    </RelativeLayout>

    <Space
        android:id="@+id/space3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/layout_profile" />

    <TableLayout
        android:id="@+id/layout_rec_cre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space3"
        android:background="#f0f0f0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recommend" />

            <Button
                android:id="@+id/button_create_own"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create" />
        </TableRow>


    </TableLayout>


    <Space
        android:id="@+id/space4"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/layout_rec_cre" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space4"
        android:background="#f0f0f0">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map1"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </RelativeLayout>
</RelativeLayout>
